samples/invalid/syntax/dedented_closer_suffix.g
language g0

same_line = (
  1
) + 2

later_line = (
  1
)
  + 2

object nested with
  member = (
    1
  ) + 2
